--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "jest",
+    "test-coverage": "jest --collect-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
